# wodgen

./: .gitignore  Cargo.toml  README.md  build.rs
exercise_library/: cooldown.csv  core.csv  legs.csv  pull.csv  push.csv  snoozed.csv
src/: csv_utils.rs  main.rs
tests/: cli.rs
workouts/: 2024_12_01.csv
