[package]
name = "wodgen"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
csv = "1.3.1"
anyhow = "1.0.93"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
