[package]
name = "wodgen"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
csv = "1.3.1"
anyhow = "1.0.94"
log = "0.4.22"
simplelog = "0.12.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
